--- a/client/src/scss/font.scss
+++ b/client/src/scss/font.scss
@@ -6,28 +6,32 @@
   font-style: normal;
   src: local('Evolventa Regular'),
     url('../../public/fonts/Evolventa-Regular.woff') format('woff');
+  font-display: fallback;
 }
 
-@font-face {
-  font-weight: normal;
-  font-family: 'Evolventa Oblique';
-  font-style: normal;
-  src: local('Evolventa Oblique'),
-    url('../../public/fonts/Evolventa-Oblique.woff') format('woff');
-}
+// @font-face {
+//   font-weight: normal;
+//   font-family: 'Evolventa Oblique';
+//   font-style: normal;
+//   src: local('Evolventa Oblique'),
+//     url('../../public/fonts/Evolventa-Oblique.woff') format('woff');
+//   font-display: fallback;
+// }
 
-@font-face {
-  font-weight: normal;
-  font-family: 'Evolventa Bold';
-  font-style: normal;
-  src: local('Evolventa Bold'),
-    url('../../public/fonts/Evolventa-Bold.woff') format('woff');
-}
+// @font-face {
+//   font-weight: normal;
+//   font-family: 'Evolventa Bold';
+//   font-style: normal;
+//   src: local('Evolventa Bold'),
+//     url('../../public/fonts/Evolventa-Bold.woff') format('woff');
+//   font-display: fallback;
+// }
 
-@font-face {
-  font-weight: normal;
-  font-family: 'Evolventa Bold Oblique';
-  font-style: normal;
-  src: local('Evolventa Bold Oblique'),
-    url('../../public/fonts/Evolventa-BoldOblique.woff') format('woff');
-}
+// @font-face {
+//   font-weight: normal;
+//   font-family: 'Evolventa Bold Oblique';
+//   font-style: normal;
+//   src: local('Evolventa Bold Oblique'),
+//     url('../../public/fonts/Evolventa-BoldOblique.woff') format('woff');
+//   font-display: fallback;
+// }
