Add span for active link

--- a/client/src/components/BarItem/baritem.module.scss
+++ b/client/src/components/BarItem/baritem.module.scss
@@ -46,6 +46,9 @@
 .img-wrap {
   height: 150px;
 }
+.active {
+  color: var(--color-secondary-text);
+}
 @media screen and (max-width: $viewport-sm) {
   .item {
     :global {
