--- a/admin/src/components/BannersCreate/bannerscreate.module.scss
+++ b/admin/src/components/BannersCreate/bannerscreate.module.scss
@@ -6,12 +6,14 @@
   display: grid;
   grid-gap: 10px;
   grid-template-areas:
-    'name . slider'
-    'dateEnd . slider'
-    'href . .'
-    'images . .'
-    'buttons . .';
-  grid-template-columns: 300px 1fr 1fr;
+    'name .'
+    'dateEnd .'
+    'href  .'
+    'images .'
+    '. .'
+    '. .'
+    'buttons .';
+  grid-template-columns: 300px 500px;
 }
 .name {
   grid-area: name;
@@ -27,7 +29,9 @@
   grid-area: images;
 }
 .slider {
+  display: flex;
   grid-area: slider;
+  justify-self: center;
 }
 .buttons-block {
   grid-area: buttons;
