--- a/client/src/components/BarItem/baritem.module.scss
+++ b/client/src/components/BarItem/baritem.module.scss
@@ -48,6 +48,7 @@
   &-modal {
     max-width: 80vw;
     max-height: 80vw;
+    object-fit: contain;
   }
 }
 .modal {
@@ -68,6 +69,21 @@
   color: var(--color-secondary-text);
 }
 @media screen and (max-width: $viewport-sm) {
+  .img {
+    &-modal {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+  .modal {
+    width: 100vw;
+    max-width: 100vw;
+    height: 100vh;
+    max-height: 100vh;
+  }
+
   .item {
     :global {
       .swiper-button-next,
