Change cursor to zoom

--- a/client/src/components/BarItem/baritem.module.scss
+++ b/client/src/components/BarItem/baritem.module.scss
@@ -41,7 +41,7 @@
   width: 150px;
   height: 150px;
   object-fit: cover;
-  cursor: pointer;
+  cursor: zoom-in;
   &-wrap {
     height: 150px;
   }
