--- a/client/src/components/Bar/bar.module.scss
+++ b/client/src/components/Bar/bar.module.scss
@@ -17,8 +17,9 @@
     }
   }
   &__item {
-    width: 150px;
-    margin-right: 1rem;
+    width: 160px;
+    height: 240px;
+    padding: 5px;
   }
 }
 .disabled {
