--- a/client/src/components/BarItem/baritem.module.scss
+++ b/client/src/components/BarItem/baritem.module.scss
@@ -9,6 +9,8 @@
   }
 
   &__price {
+    position: absolute;
+    bottom: 0;
     &-current {
       font-size: 1.5rem;
     }
@@ -37,14 +39,11 @@
     }
   }
 }
-.head {
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-  width: 100%;
-  padding-bottom: 2px;
-  font-size: 0.9rem;
-  text-transform: lowercase;
+.area {
+  font-weight: bold;
+}
+.brand {
+  color: var(--color-secondary);
 }
 .img {
   width: 150px;
