--- a/client/src/components/Item/item.module.scss
+++ b/client/src/components/Item/item.module.scss
@@ -2,17 +2,17 @@
 
 .item {
   position: relative;
-  z-index: 100;
   display: inline-flex;
   flex-direction: column;
   box-sizing: border-box;
   max-width: 270px;
-  height: 400px;
+  height: 440px;
   padding: 20px;
   overflow: hidden;
   transition: all 0.4s ease-in-out;
   &:hover {
-    z-index: 2;
+    z-index: 100;
+    background-color: #fff;
     -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.45);
     -moz-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.45);
     box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.45);
@@ -31,10 +31,13 @@
   justify-content: space-between;
   margin-bottom: 5px;
   font-size: 0.9rem;
+  &:nth-child(3) {
+    margin-bottom: 0;
+  }
 }
 .name {
   min-height: 60px;
-  font-weight: 400;
+  font-weight: 600;
   font-size: 1.2rem;
   font-style: normal;
   line-height: 2rem;
@@ -45,6 +48,9 @@
   object-fit: cover;
 }
 .price {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
   &-current {
     display: inline-block;
     margin-right: 0.8rem;
