Add hide img for mobile

--- a/client/src/components/Dismantling/dismantling.module.scss
+++ b/client/src/components/Dismantling/dismantling.module.scss
@@ -6,8 +6,17 @@
 .list {
   padding: 1rem;
 }
+.img {
+  float: left;
+  width: 240px;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+}
 @media (max-width: $viewport-md) {
   .block {
     padding: 1rem;
+  }
+  .img {
+    display: none;
   }
 }
