--- a/client/src/components/Item/item.module.scss
+++ b/client/src/components/Item/item.module.scss
@@ -79,13 +79,23 @@
 
     width: 100%;
     max-width: 100%;
+    height: 500px;
     border: 1px solid var(--color-divider);
     cursor: pointer;
     &:hover {
+      box-shadow: none;
       transform: none;
+    }
+    &:first-child {
+      border-top-color: transparent;
+    }
+    &:last-child {
+      border-bottom-color: transparent;
     }
   }
   .img {
+    width: 320px;
+    height: 320px;
     margin: 0 auto;
   }
 }
