--- a/client/src/components/BarItem/baritem.module.scss
+++ b/client/src/components/BarItem/baritem.module.scss
@@ -3,14 +3,15 @@
 .item {
   display: flex;
   flex-direction: column;
-
+  height: 100%;
   &:last-child {
     margin-right: 0;
   }
 
   &__price {
     position: absolute;
-    bottom: 0;
+    right: 20px;
+    bottom: 20px;
     &-current {
       font-size: 1.5rem;
     }
@@ -39,20 +40,30 @@
     }
   }
 }
+.type {
+  font-size: 0.9rem;
+  text-transform: lowercase;
+}
 .area {
-  font-weight: bold;
+  margin-bottom: 5px;
+  font-size: 0.9rem;
+  line-height: 1;
 }
 .brand {
-  color: var(--color-secondary);
+  font-size: 0.9rem;
+  line-height: 1;
 }
 .img {
-  width: 150px;
-  height: 150px;
+  display: flex;
+  align-content: center;
+  justify-self: center;
+  width: 230px;
+  height: 230px;
   object-fit: cover;
   &-wrap {
     display: flex;
     justify-content: center;
-    height: 150px;
+    height: 230px;
   }
   &-modal {
     width: 100%;
