--- a/client/src/components/BarItem/baritem.module.scss
+++ b/client/src/components/BarItem/baritem.module.scss
@@ -66,7 +66,8 @@
     height: 230px;
   }
   &-modal {
-    width: 100%;
+    width: 80vh;
+    height: 80vh;
     object-fit: contain;
   }
 }
@@ -75,8 +76,8 @@
 }
 .modal {
   box-sizing: border-box;
-  max-width: 80vw;
-  max-height: 80vw;
+  max-width: 90vh;
+  max-height: 90vh;
   padding: 30px;
   background-color: #fff;
   border-radius: var(--radius);
